@@ -5,6 +5,7 @@ import GameEntity.Enemy.BaseEnemy;
 import GameEntity.Player.Player;
 import Manager.BulletManager;
 import Manager.EnemyManager;
+import Manager.PlayerManager;
 import javafx.scene.media.AudioClip;
 
 import java.util.ArrayList;
@@ -12,8 +13,8 @@ import java.util.ArrayList;
 public class PlayerUtils {
     public static void normal(Player player){
         // player shooting pattern
-        PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 50, player.getTransform().getPosY() + 20, -90, 2, 2), 0);
-        PlayerBullet bullet2 = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX(), player.getTransform().getPosY() + 20, -90, 2, 2), 0);
+        PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 50, player.getTransform().getPosY() + 20, -90, 2, 2), 0, PlayerManager.getInstance().getBioticRifleDamage(),1);
+        PlayerBullet bullet2 = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX(), player.getTransform().getPosY() + 20, -90, 2, 2), 0, PlayerManager.getInstance().getBioticRifleDamage(),1);
         BulletManager.getInstance().add(bullet);
         BulletManager.getInstance().add(bullet2);
     }
@@ -21,7 +22,7 @@ public class PlayerUtils {
     public static void twin(Player player){
         // player shooting pattern
         for(int i = 0; i < 4; i++){
-            PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 25 * i, player.getTransform().getPosY() + 20, -90, 2, 2), 0);
+            PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 25 * i, player.getTransform().getPosY() + 20, -90, 2, 2), 0, PlayerManager.getInstance().getBioticRifleDamage(),1);
             BulletManager.getInstance().add(bullet);
         }
     }
@@ -30,7 +31,7 @@ public class PlayerUtils {
 
         for(int i = 0; i < 10; i++){
             //TODO
-            PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 50, player.getTransform().getPosY() + 20, -180 + i * 20, 2, 2), 0);
+            PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 50, player.getTransform().getPosY() + 20, -180 + i * 20, 2, 2), 0, PlayerManager.getInstance().getBioticRifleDamage(),1);
             bullet.setImage(Asset.UI.upgradeButtonHover);
             BulletManager.getInstance().add(bullet);
         }
@@ -41,10 +42,10 @@ public class PlayerUtils {
         if(enemies.isEmpty()){
             return;
         }
-        BaseEnemy enemy = enemies.getFirst();
+        BaseEnemy enemy = enemies.get(0);
         Transform tf = enemy.getTransform();
         double rot = Transform.calculateAngleToTarget(player.getTransform(), tf);
-        PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 25, player.getTransform().getPosY() + 20, rot, 2, 2), 0);
+        PlayerBullet bullet = new PlayerBullet(10, player, new Transform(player.getTransform().getPosX() + 25, player.getTransform().getPosY() + 20, rot, 2, 2), 0, PlayerManager.getInstance().getBioticRifleDamage(),1);
         BulletManager.getInstance().add(bullet);
 
         AudioClip bulletSound = Asset.Audio.bulletSound;
